fixed gap header

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -149,6 +149,7 @@ header{
 }
 @media screen and (orientation: landscape){
     .mobile-landscape #menuList{
-        height: 80vh;
+        gap: 10px;
+        height: 60vh;
     }
 }
